--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Spidey</string>
+
+    <!--detail activity-->
+    <string name="no_title">No title available</string>
+    <string name="no_description">No description available</string>
 </resources>
