Recycler view has a scroll listener that calls loadMore when more data is needed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!--detail activity-->
     <string name="no_title">No title available</string>
     <string name="no_description">No description available</string>
+    <string name="no_comics">That\'s all the comics we have</string>
 </resources>
