Retry 3 times before declaring failure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="no_title">No title available</string>
     <string name="no_description">No description available</string>
     <string name="no_comics">That\'s all the comics we have</string>
+    <string name="error_loading">Failed getting comics</string>
 
     <!--transition names-->
     <string name="tran_name_title">transition:TITLE</string>
